# cascadio

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  pyproject.toml
.github/workflows/: wheels.yml
LICENSE/: LICENSE-cascadio.md  LICENSE-opencascade.md  README.md
extensions/TM_brep_faces/: README.md
extensions/TM_brep_faces/schema/: definitions.schema.json  face.schema.json  mesh.primitive.TM_brep_faces.schema.json
patches/: tm_brep_faces.patch
scripts/: audit_wheel.sh  build_occt.py  build_schema.py  color_by_primitive.py  test_readonly.py
src/: convert.hpp  extras.hpp  filehandle.hpp  iges.hpp  imemstream.hpp  main.cpp  materials.hpp  primitives.hpp  step.hpp  tempfile.hpp
src/cascadio/: __init__.py  _core.pyi  extension.py  primitives.py  schema.json
tests/: convert_test.py  test_convert.py  test_load.py  test_schema.py
tests/models/: colored.step  material.stp  microstrip.igs  tilt.IGS
