[build-system]
requires = ["scikit_build_core >= 0.9.0",
            "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "cascadio"
version = "0.0.18rc0"
requires-python = ">=3.8"
authors = [{name = "Michael Dawson-Haggerty", email = "mikedh@kerfed.com"}]
license = {file = "LICENSE/LICENSE-cascadio.md"}
description = "Convert STEP files to GLB using OpenCASCADE"
keywords = ["graphics", "STEP", "GLTF"]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Graphics :: 3D Modeling"
]
urls = {Homepage = "https://github.com/trimesh/cascadio"}

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.optional-dependencies]
tests = ["pytest", "trimesh", "chardet"]

[tool.scikit-build]
wheel.packages = ["src/cascadio"]

[tool.cibuildwheel]
# `yum` would need to be replaced in the `before-all`
# script before the musl linux can build OpenCASCADE
skip = "*musl* *win32*"

# Use manylinux_2_28 for GCC 12+ (needed for OCCT 8.x constexpr)
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"

# pypy compiles numpy for every test
test-skip = "pp* *i686"

# Build OCCT (skips automatically if cached)
before-all = "pip install ninja cmake && python scripts/build_occt.py"

test-extras = "tests"
test-command = "pytest {project}/tests"

[tool.cibuildwheel.linux]
repair-wheel-command = "LD_LIBRARY_PATH=/project/upstream/OCCT/lin64/gcc/lib:/project/upstream/OCCT/lin32/gcc/lib auditwheel repair --exclude libGL.so.1 --lib-sdir . -w {dest_dir} {wheel}"

[tool.cibuildwheel.windows]
before-build = "pip install delvewheel"
repair-wheel-command = "delvewheel repair --add-path upstream/OCCT/win64/vc14/bin -w {dest_dir} {wheel}"

[tool.cibuildwheel.macos]
# Require macOS 10.15+ for std::filesystem support
environment = { MACOSX_DEPLOYMENT_TARGET = "10.15" }
repair-wheel-command = "DYLD_LIBRARY_PATH=upstream/OCCT/mac64/clang/lib delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel}"
